Added information to sections

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       </nav>
     </header>
     <section class="profile">
-      <img src="ProfilePic.png" alt="Photo of Alison Work" width="130px" height="130px"/>
+      <img src="ProfilePic.png" alt="Photo of Alison Work"/>
       <h2>Alison Work</h2>
       <h3><strong>UX Design Graduate Student</strong> | Michigan State University</h3>
-      <h4>200 followers</h4><h4>200 following</h4>
+      <a href="" class="interactions">200 followers</a><a href="" class="interactions">200 following</a>
     </section>
     <section class="buttons">
       <button class="button1">Follow</button>
@@ -31,9 +31,25 @@
     <main>
     <section class="posts">
       <h2>Posts</h2>
+      <div class="postCard">
+        <img src="ProfilePic.png" alt="Picture of Alison"/>
+        <h3>Alison Work</h3>
+        <p>Excited to announce I was accepted into the UX Design Masters Program at Michigan State University!</p>
+      </div>
+      <a href="" class="interactions">20 likes</a>
+      <a href="" class="interactions">10 comments</a>
+      <div class="postCard">
+        <img src="ProfilePic.png" alt="Picture of Alison"/>
+        <h3>Alison Work</h3>
+        <p>This article I found on Medium was really interesting! http://www.medium.com</p>
+      </div>
+      <a href="" class="interactions">12 likes</a>
+      <a href="" class="interactions">8 comments</a>
     </section>
     <section class="projects">
       <h2>Projects</h2>
+      <img src="Project1.png" alt="Screenshot of a card layout"/>
+      <img src="Project 3.png" alt="Screenshot of a interactive video on hydroponics"/>
     </section>
     <section class="about">
       <h2>About</h2>
@@ -41,6 +57,12 @@
     </section>
     <section class="experience">
       <h2>Experience</h2>
+      <h3>Master of Science in UX Design</h3>
+      <p>Michigan State University</p>
+      <p class="date">2023 – present</p>
+      <h3>Digital Media Designer</h3>
+      <p>Michigan State University Extension</p>
+      <p class="date">2018 – present</p>
     </section>
   </main>
     <script src="index.js"></script>
